# cpp20Sandbox

./: .gitignore  CMakeCache.txt  CMakeLists.txt  imgui.ini
cmake/: Conan.cmake  StaticAnalyzers.cmake
src/: CMakeLists.txt  main.cpp
src/CoreLogicManager/: CMakeLists.txt  CoreLogicManager.cpp  CoreLogicManager.hpp
src/CoreLogicManager/EntityManager/: CMakeLists.txt  EntityManager.cpp  EntityManager.hpp
src/CoreLogicManager/EntityManager/CollisionManager/: CMakeLists.txt  CollisionManager.hpp
src/CoreLogicManager/EntityManager/Entity/: CMakeLists.txt  Entity.cpp  Entity.hpp  FixedEntity.hpp  IEntity.hpp
src/CoreLogicManager/Messages/: LogicInputMessage.hpp
src/GuiManager/: CMakeLists.txt  GuiManager.cpp  GuiManager.hpp
src/GuiManager/Messages/: GuiManMessages.hpp
src/RunnableManager/: CMakeLists.txt  RunnableManager.cpp  RunnableManager.hpp
src/ThreadCommunicator/: CMakeLists.txt  ThreadCommunicator.cpp  ThreadCommunicator.hpp
src/ThreadCommunicator/Messages/: ThreadCommMessages.hpp
